# webrtc-java

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/actions/build-macos-x86_64/: action.yml
.github/actions/checkout/: action.yml
.github/actions/download-artifact/: action.yml
.github/actions/prepare-linux/: action.yml
.github/actions/prepare-macos/: action.yml
.github/actions/prepare-windows/: action.yml
.github/actions/publish/: actions.yml
.github/actions/release/: action.yml
.github/actions/release-macos-x86_64/: action.yml
.github/actions/setup-gradle/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build.yml  release.yml
docs/: package-lock.json
gradle/: libs.versions.toml
webrtc/: build.gradle.kts  pom.xml
webrtc-examples/src/main/java/: module-info.java
webrtc-jni/: build.gradle.kts  gradle.properties  pom.xml
webrtc-jni/src/main/cpp/: CMakeLists.txt
webrtc-jni/src/main/cpp/dependencies/jni-voithos/include/: JavaArray.h  JavaBigInteger.h  JavaClassUtils.h  JavaContext.h  JavaPrimitive.h  JavaString.h  JavaThreadEnv.h  JavaThrowable.h  JavaUtils.h
webrtc-jni/src/main/cpp/dependencies/jni-voithos/include/jni/windows/: jni_md.h
webrtc-jni/src/main/cpp/dependencies/jni-voithos/src/: JavaBigInteger.cpp  JavaThreadEnv.cpp  JavaUtils.cpp
webrtc-jni/src/main/cpp/dependencies/webrtc/: CMakeLists.txt
webrtc-jni/src/main/cpp/dependencies/webrtc/patches/windows/: disable_desktop_capture.patch
webrtc-jni/src/main/cpp/include/: JNI_Logging.h  JNI_PeerConnectionFactory.h  JNI_RTCDataChannel.h  JNI_RTCDtlsTransport.h  JNI_RTCPeerConnection.h  JNI_RefCountedObject.h  JNI_WebRTC.h  WebRTCContext.h
webrtc-jni/src/main/cpp/include/api/: HeadlessAudioDeviceModule.h  PeerConnectionObserver.h  RTCStats.h
webrtc-jni/src/main/cpp/include/media/audio/linux/: PulseAudioLoader.h
webrtc-jni/src/main/cpp/src/: JNI_Logging.cpp  JNI_PeerConnectionFactory.cpp  JNI_RTCDataChannel.cpp  JNI_RTCDtlsTransport.cpp  JNI_RTCPeerConnection.cpp  JNI_RefCountedObject.cpp  WebRTCContext.cpp
webrtc-jni/src/main/cpp/src/api/: HeadlessAudioDeviceModule.cpp  PeerConnectionObserver.cpp  RTCAnswerOptions.cpp  RTCDataChannelObserver.cpp  RTCIceServer.cpp  RTCOfferOptions.cpp  RTCPeerConnectionIceErrorEvent.cpp  RTCStats.cpp  RTCStatsCollectorCallback.cpp
webrtc-jni/src/main/cpp/src/media/audio/linux/: PulseAudioDeviceManager.cpp
webrtc-jni/src/main/cpp/src/rtc/: LogSink.cpp  RTCCertificatePEM.cpp
webrtc-jni/src/main/cpp/toolchain/: linux-aarch32.cmake  linux-aarch64.cmake  linux-x86_64.cmake  windows-aarch64.cmake  windows-x86_64.cmake
webrtc/src/main/java/: module-info.java
webrtc/src/main/java/dev/kastle/webrtc/: CreateSessionDescriptionObserver.java  PeerConnectionFactory.java  PeerConnectionObserver.java  PortAllocatorConfig.java  RTCAnswerOptions.java  RTCBundlePolicy.java  RTCCertificatePEM.java  RTCConfiguration.java  RTCDataChannel.java  RTCDataChannelBuffer.java  RTCDataChannelInit.java  RTCDataChannelObserver.java  RTCDataChannelState.java  RTCDtlsTransport.java  RTCDtlsTransportObserver.java  RTCDtlsTransportState.java  RTCDtxStatus.java  RTCIceCandidate.java  RTCIceConnectionState.java  RTCIceGatheringState.java  (+19 more)
(+29 files in other folders)
